--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ a { color: white; text-decoration: none; display: flex; align-items: center; wid
     <div class="final-section">
       <div id="finalMessage" class="final-message">❌ نفّذ الخطوات أولاً لكي يتم فتح روابط التحميل</div>
       <div class="final-buttons">
-        <a id="btnDownload" href="https://linkjust.com/Kdu8sGDh" onclick="goToDownload(); return false;">🔒لتحميل اقوي هكر فري فاير هيدشوت تلقائي + كشف اماكن + ضد الحظر اخر تحديث اضغط هنا</a>
+        <a id="btnDownload" href="https://nitro-link.pro/ffmod-v173" onclick="goToDownload(); return false;">🔒لتحميل اقوي هكر فري فاير هيدشوت تلقائي + كشف اماكن + ضد الحظر اخر تحديث اضغط هنا</a>
       </div>
     </div>
   </div>
@@ -264,8 +264,8 @@ a { color: white; text-decoration: none; display: flex; align-items: center; wid
     document.getElementById("mainImage").addEventListener("contextmenu", function(e){ e.preventDefault(); });
 
     const STEP_EXPIRY_MS = 365 * 24 * 60 * 60 * 1000;
-    const step3Links = ["https://youtu.be/JSkg5HQc7Gc"];
-    const step3StorageKey = "step3States_v7263263263623828323232323_page82732636237238283283";
+    const step3Links = ["https://youtu.be/dykvzX70uzM"];
+    const step3StorageKey = "step3States_v62352536273263624242422_page625452462626426462462";
     const step4StorageKey = "step4States_v54566665_page55599955";
     const stepsStateKey = "stepsState";
 
@@ -382,7 +382,7 @@ a { color: white; text-decoration: none; display: flex; align-items: center; wid
         if(!document.getElementById("btnGuide")){
           const guideBtn=document.createElement("a");
           guideBtn.id="btnGuide";
-          guideBtn.href="https://youtu.be/Jlf555kfJMI";
+          guideBtn.href="https://youtu.be/eoIlZ921vdo";
           guideBtn.target="_blank";
           guideBtn.className="btn-guide active";
           guideBtn.innerText="❓ إذا واجهت أي مشكلة في التحميل اضغط هنا";
@@ -402,7 +402,7 @@ a { color: white; text-decoration: none; display: flex; align-items: center; wid
     }
 
     for(let i=1;i<=4;i++){ document.getElementById("step"+i).addEventListener("contextmenu", function(e){ e.preventDefault(); }); }
-    function goToDownload(){ window.open("https://linkjust.com/Kdu8sGDh","_blank"); }
+    function goToDownload(){ window.open("https://nitro-link.pro/ffmod-v173","_blank"); }
 
     const downloadBtn=document.getElementById("btnDownload");
     const copyPopup=document.getElementById("copyPopup");
